COMMIT25 update user password for more secure and flexible